Got threejs and nodejs working together. Renders amoeba building page.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
-<!doctype html>
+<!--<!doctype html>
 <html>
 	<head>
-		<title>learningthree.js boiler plate for three.js</title>
+	  <title>learningthree.js boiler plate for three.js</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		
@@ -9,9 +9,9 @@
     <script src="../public/vendor/jQuery.js"></script>
     <script src="../public/vendor/cannon/Cannon.js"></script>
     <script src="../public/vendor/three/Three.js"></script>
-		<script src="../public/vendor/three/Detector.js"></script>
+		<script src="../public/vendor/three/Detector.js"></script> -->
 		<!-- https://github.com/mrdoob/stats.js -->
-		<script src="../public/vendor/three/Stats.js"></script>
+		<!--<script src="../public/vendor/three/Stats.js"></script>
 		<script src="../public/vendor/threex/THREEx.WindowResize.js"></script>
     <script src="../public/vendor/threex/THREEx.KeyboardState.js"></script>
     <script src="../public/vendor/EventEmitter.js"></script>
@@ -30,7 +30,7 @@
 
 		<link  href="css/main.css" rel="stylesheet"/>
 	</head>
-<body>
+<body>-->
   <div id="amoeba"></div>
 	<script type="text/javascript">
     var Amoeba = new Game({
@@ -180,5 +180,5 @@
     Amoeba.run();
     
 	</script>
-</body>
-</html>
+<!--</body>
+</html>-->
