--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,46 +1,13 @@
-<!--<!doctype html>
-<html>
-	<head>
-	  <title>learningthree.js boiler plate for three.js</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		
-    <script src="../public/vendor/Prototype.js"></script>
-    <script src="../public/vendor/jQuery.js"></script>
-    <script src="../public/vendor/cannon/Cannon.js"></script>
-    <script src="../public/vendor/three/Three.js"></script>
-		<script src="../public/vendor/three/Detector.js"></script> -->
-		<!-- https://github.com/mrdoob/stats.js -->
-		<!--<script src="../public/vendor/three/Stats.js"></script>
-		<script src="../public/vendor/threex/THREEx.WindowResize.js"></script>
-    <script src="../public/vendor/threex/THREEx.KeyboardState.js"></script>
-    <script src="../public/vendor/EventEmitter.js"></script>
-    <script src="../public/vendor/Underscore.js"></script>
-    <script src="../public/vendor/dat.gui.min.js"></script>
-    <script src="../public/js/physics.js"></script>
-    <script src="../public/js/input.js"></script>
-    <script src="../public/js/game.js"></script>
-    <script src="../public/js/component.js"></script>
-    <script src="../public/js/entity.js"></script>
-    <script src="../public/js/prefab.js"></script>
-    <script src="../public/js/components/controller.js"></script>
-    <script src="../public/js/components/rigidbody.js"></script>
-    <script src="../public/js/components/follow.js"></script>
-    <script src="../public/js/components/interface.js"></script>
-
-		<link  href="css/main.css" rel="stylesheet"/>
-	</head>
-<body>-->
-  <div id="amoeba"></div>
-	<script type="text/javascript">
+<div id="amoeba"></div>
+  <script type="text/javascript">
     var Amoeba = new Game({
       canvas: '#amoeba',
       width: window.innerWidth,
       height: window.innerHeight,
       debug: true,
-    }, "scene1");
+    });
 
-    Prefab.define("MenuCamera", function() {
+    Prefab.define("PlayerCamera", function() {
       var camera = new Entity.Camera(
         45, 
         window.innerWidth / window.innerHeight,
@@ -51,47 +18,83 @@
       var follow = new Follow();
       follow.offset = new THREE.Vector3(0, 200, -1); //Fuck you, gimbal.
 
+      var controls = new Controller({
+        'forward': function() {
+          var tar = this.getComponent("follow").target;
+          tar.getComponent("rigidbody")._body.force.z = 200;
+        },
+        'left': function() {
+          var tar = this.getComponent("follow").target;
+          tar.getComponent("rigidbody")._body.force.x = 200;
+        },
+        'right': function() {
+          var tar = this.getComponent("follow").target;
+          tar.getComponent("rigidbody")._body.force.x = -200;
+        },
+        'back': function() {
+          var tar = this.getComponent("follow").target;
+          tar.getComponent("rigidbody")._body.force.z = -200;
+        },
+        'query': function() {
+          this.getComponent("follow").offset.add(new THREE.Vector3(0, 50, 0));
+        },
+        'use': function() {
+          this.getComponent("follow").offset.add(new THREE.Vector3(0, -50, 0));
+        }
+      });
       camera.addComponent(follow);
+      camera.addComponent(controls);
       return camera;
     });
-    var camera = Amoeba.addEntity("MenuCamera");
+    var camera = Amoeba.addEntity("PlayerCamera");
 
-    Prefab.define("ConfigMenu", function() {
-      var master = new Entity.Transform("ConfigMenu");
+    Prefab.define("Player", function() {
+      var master = new Entity.Mesh(
+        "Player",
+        new THREE.SphereGeometry(),
+        new THREE.MeshPhongMaterial()
+      );
+      var mbody = new Rigidbody(0.5, new CANNON.Sphere(50));
+      mbody._body.position.set(0, 100, 0);
 
       var inter = new Interface({
-        'sphere': {
+        'position': {
           target: master,
           setup: function(el) {
-            $(document.createElement('button'))
-            .text('Sphere')
-            .addClass('sphere')
+            $(document.createElement('p'))
+            .addClass('x')
+            .css({
+              color: '#ff0000'
+            })
+            .appendTo($(el));
+
+            $(document.createElement('p'))
+            .addClass('y')
+            .css({
+              color: '#00ff00'
+            })
+            .appendTo($(el));
+
+            $(document.createElement('p'))
+            .addClass('z')
             .css({
               color: '#0000ff'
             })
-            .appendTo($(el))
-            .click(function() {
-              Amoeba.addEntity("SphereProxy"); 
-            });
+            .appendTo($(el));
+          },
+          update: function(el) {
+            $(el).find('.x').text(this.position.x.toPrecision(5));
+            $(el).find('.y').text(this.position.y.toPrecision(5));
+            $(el).find('.z').text(this.position.z.toPrecision(5));
           }
         }
-      }, [50, 50]);
-
+      });
       master.addComponent(inter);
+      master.addComponent(mbody);
       return master;
     });
-    var menu = Amoeba.addEntity("ConfigMenu");
-
-    Prefab.define("PlayerBase", function() {
-      var sphere = new Entity.Mesh(
-        "PlayerBase",
-        new THREE.SphereGeometry(),
-        new THREE.MeshLambertMaterial()
-      );
-      return sphere;
-    });
-    var base = Amoeba.addEntity("PlayerBase");
-    camera.getComponent('follow').target = base;
+    var player = Amoeba.addEntity("Player");
+    camera.getComponent("follow").target = player;
 
     Prefab.define("Ground", function() {
       var pln = new THREE.PlaneGeometry(1000, 1000, 20, 20)
@@ -108,77 +111,26 @@
       ground.addComponent(sbd);
       return ground;
     });
-    var ground = Amoeba.addEntity("Ground");
+    Amoeba.addEntity("Ground");
 
-    var vertices = _.filter(base.geometry.vertices, function(vert) {
-      return Math.abs(vert.y - 25) < 0.00001;
-    });
-    var eligible = [
-      [base, vertices]
-    ];
-    Prefab.define("SphereProxy", function() {
-      var sphere = new Entity.Mesh(
-        "SphereProxy",
-        new THREE.SphereGeometry(25),
-        new THREE.MeshLambertMaterial()
-      );
-
-      var projector = new THREE.Projector();
-      var controller = new Controller({
-        'pointer.move': function(x, y) {
-          var vec = new THREE.Vector3(
-            (x / window.innerWidth) * 2 - 1,
-            (y / window.innerHeight) * -2 + 1,
-            0.5
-          );
-          var ray = projector.pickingRay(vec, camera);
-          var tar = _.head(ray.intersectObject(ground)).point;
-          tar.add(new THREE.Vector3(0, 25, 0)); 
-
-          var selected = null;
-          _.each(eligible, function(el) {
-            var verts = _.sortBy(el[1], function(vert) {
-              return tar.distanceToSquared(vert);
-            });
-
-            var closest = _.head(verts)
-              , distance = closest.distanceToSquared(tar);
-
-            if (distance < 225) {
-              if (!selected) {
-                selected = closest;
-              } 
-
-              if (selected && distance < selected.distanceToSquared(tar)) {
-                selected = closest;
-              }
-            }
-          });
-
-          if (selected) {
-            this.snapped = true;
-            this.position = selected;
-          } else {
-            this.snapped = false;
-            this.position = tar;
-          }
-        },
-        'pointer.down': function(x, y) {
-          if (this.snapped) {
-            this.removeComponent("controller");
-          }
-        }
-      });
-      sphere.addComponent(controller);
-      return sphere;
-    });
-    
     var light = new Entity.PointLight("Light", 0xff0000, 1, 1000);
     light.position.set(0, 300, 0);
     Amoeba.addEntity(light);
 
+    var helpZ = new THREE.ArrowHelper(
+      new THREE.Vector3(0, 0, 1),
+      new THREE.Vector3(0, 0, 0),
+      50,
+      0xFF0000
+    );
+    var helpX = new THREE.ArrowHelper(
+      new THREE.Vector3(1, 0, 0),
+      new THREE.Vector3(0, 0, 0),
+      50,
+      0x00FF00
+    );
+    Amoeba._scene.add(helpZ);
+    Amoeba._scene.add(helpX);
     Amoeba.run();
     
-	</script>
-<!--</body>
-</html>-->
+  </script>
