--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,5 @@
+
+/* Amoebadome Styling */
 body {
 	overflow	: hidden;
 	padding		: 0;
@@ -8,25 +10,10 @@ body {
 	font-family	: arial;
 	font-size	: 100%;
 }
-#info .top {
-	position	: absolute;
-	top		: 0px;
-	width		: 100%;
-	padding		: 5px;
-	text-align	: center;
-}
-#info a {
-	color		: #66F;
-	text-decoration	: none;
-}
-#info a:hover {
-	text-decoration	: underline;
-}
-#info .bottom {
-	position	: absolute;
-	bottom		: 0px;
-	right		: 5px;
-	padding		: 5px;
+
+h3 {
+  margin: 0px;
+  color: #dd3333;
 }
 
 #interface {
@@ -35,11 +22,50 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 999;
+}
+
+.health-container {
+  width: 256px;
+  height: 20px;
+  border: 2px solid #dd3333;
+  margin: 10px;
+  float: left;
 }
 
 .health-bar {
-  height: 60px;
-  background: #00ff00;
+  background-color: rgba(255, 128, 128, 128);
+  height: 100%;
+}
+
+.point-counter {
+  width: 128px;
+  height: 64px;
+  margin: 10px;
+  line-height: 64px;
+  float: right;
+  vertical-align: middle;
+}
+
+.point-counter h3:before {
+  position: relative;
+  left: 0px;
+  top: 0px;
+  content: url('../images/dna-icon.png');
+}
+
+.point-counter h3 {
+  display: inline;
+  float: none;
+  color: #000;
+  margin: 0px;
+  padding: 0px;
+  line-height: 64px;
+  font-size: 32px;
+}
+
+.hud {
+  height: 100%;
 }
 
 .item-nav {
