--- a/public/css/main.css
+++ b/public/css/main.css
@@ -38,60 +38,27 @@ h3 {
   height: 100%;
 }
 
-.point-counter {
-  width: 128px;
-  height: 64px;
-  margin: 10px;
-  line-height: 64px;
-  float: right;
-  vertical-align: middle;
+.point-container {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  width: 80px;
+  height: 80px;
+  background: url('../images/dna-icon.png') center center no-repeat;
+  background-size: 100%;
 }
 
-.point-counter h3:before {
-  position: relative;
-  left: 0px;
-  top: 0px;
-  content: url('../images/dna-icon.png');
+.point-gauge {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
-.point-counter h3 {
-  display: inline;
-  float: none;
-  color: #000;
-  margin: 0px;
-  padding: 0px;
-  line-height: 64px;
-  font-size: 32px;
+.point-gauge img {
+  width: 80px;
+  height: 80px; 
 }
 
 .hud {
   height: 100%;
-}
-
-.item-nav {
-  background: #aaaaaa;
-  height: 100%; 
-  float: right;
-  width: 25%;
-}
-
-.item-nav h2 {
-  width: 100%;
-  height: 50px;
-  text-align: center;
-  background-color: #efefef;
-}
-
-.item-nav [data-click] {
-  width: 75px;
-  height: 75px;
-  margin: 10px;
-  border: none;
-  padding: none;
-}
-
-.item-nav [data-click]:hover, 
-.item-nav [data-click]:focus {
-  background-color: #ababab;
-  border: none;
 }
